--- a/package.json
+++ b/package.json
@@ -25,13 +25,27 @@
   },
   "homepage": "https://github.com/enemieltje/DnDTable#readme",
   "dependencies": {
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/node": "18.16.0",
-		"resolve-tspaths": "^0.8.13",
-		"tsx": "^3.12.7",
-		"typescript": "^5.1.3",
-		"npm-check-updates": "^16.10.12"
-  }
+    "@types/websocket": "^1.0.5",
+    "npm-check-updates": "^16.10.12",
+    "resolve-tspaths": "^0.8.13",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.3"
+  },
+	"prettier": {
+		"printWidth": 100,
+		"tabWidth": 4,
+		"useTabs": true,
+		"semi": true,
+		"singleQuote": false,
+		"quoteProps": "consistent",
+		"trailingComma": "es5",
+		"bracketSpacing": true,
+		"arrowParens": "avoid",
+		"endOfLine": "auto"
+	}
 }
